--- a/render/templates/render/art_form.html
+++ b/render/templates/render/art_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <p>
-    <a class="btn btn-light" href="{% url 'firegrass_Art_list' %}">
+    <a class="btn btn-light" href="{% url 'render_Art_list' %}">
     Art Listing
     </a>
 </p>
